23 Jul 2015, PHP 7.0.0 Beta 2

- Core:
  . Fixed bug #70057 (Build failure on 32-bit Mac OS X 10.6.8: recursive
    inlining). (Laruence)
  . Fixed bug #70012 (Exception lost with nested finally block). (Laruence)
  . Fixed bug #69996 (Changing the property of a cloned object affects the
    original). (Dmitry, Laruence)

- Curl:
  . Fixed bug #70065 (curl_getinfo() returns corrupted values). (Anatol)

- GD:
  . Fixed bug #66882 (imagerotate by -90 degrees truncates image by 1px). (cmb)
  . Fixed bug #70064 (imagescale(..., IMG_BICUBIC) leaks memory). (cmb)
  . Fixed bug #69024 (imagescale segfault with palette based image). (cmb)
  . Fixed bug #53154 (Zero-height rectangle has whiskers). (cmb)
  . Fixed bug #67447 (imagecrop() add a black line when cropping). (cmb)
  . Fixed bug #68714 (copy 'n paste error). (cmb)
  . Fixed bug #66339 (PHP segfaults in imagexbm). (cmb)
  . Fixed bug #70047 (gd_info() doesn't report WebP support). (cmb)

- Opcache:
  . Fixed bug #70058 (Build fails when building for i386). (Laruence)

- Soap:
  . Fixed bug #70032 (make_http_soap_request calls
    zend_hash_get_current_key_ex(,,,NULL). (Laruence)

- SPL:
  . Fixed bug #70053 (MutlitpleIterator array-keys incompatible change in 
    PHP 7). (Tjerk)

- Standard:
  . Fixed bug #70018 (exec does not strip all whitespace). (Laruence)

- Tokenizer:
  . Fixed bug #69430 (token_get_all has new irrecoverable errors). (Nikita)

09 Jul 2015, PHP 7.0.0 Beta 1

- Core:
  . Fixed bug #70006 (cli - function with default arg = STDOUT crash output).
    (Laruence)
  . Fixed bug #69521 (Segfault in gc_collect_cycles()).
    (arjen at react dot com, Laruence)
  . Improved zend_string API (Francois Laupretre)
  . Fixed bug #69955 (Segfault when trying to combine [] and assign-op on
    ArrayAccess object). (Laruence)
  . Fixed bug #69957 (Different ways of handling div/mod/intdiv). (Bob)
  . Fixed bug #69900 (Too long timeout on pipes). (Anatol)

- CLI server: